Send init data to CMS

--- a/tumbs/templates/pages/websites.html
+++ b/tumbs/templates/pages/websites.html
@@ -8,5 +8,5 @@
 {% endblock javascript %}
 
 {% block content %}
-  <div id="cms" data-websites="{{ websites }}"></div>
+  <div id="cms" data-init='{{ js_init }}'></div>
 {% endblock content %}
