Add some Bootstrap styling

--- a/tumbs/static/sass/bs.scss
+++ b/tumbs/static/sass/bs.scss
@@ -1,3 +1,6 @@
+$bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
+@import "~bootstrap-icons/font/bootstrap-icons.scss";
+
 //@import "~bootstrap/scss/mixins/banner";
 //@include bsBanner("");
 
