--- a/tumbs/templates/pages/websites.html
+++ b/tumbs/templates/pages/websites.html
@@ -7,6 +7,14 @@
   {% render_bundle 'cms' 'js' attrs='defer' %}
 {% endblock javascript %}
 
+{% block websites_active %}active disabled{% endblock %}
+
 {% block content %}
-  <div id="cms" data-init='{{ js_init }}'></div>
+  <div id="cms" data-init='{{ js_init }}'>
+    <div class="d-flex justify-content-center align-items-end" style="height: 5rem">
+      <div class="spinner-grow text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
