--- a/tumbs/static/sass/bs.scss
+++ b/tumbs/static/sass/bs.scss
@@ -4,6 +4,8 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
 //@import "~bootstrap/scss/mixins/banner";
 //@include bsBanner("");
 
+@import 'bs-vars';
+
 // Configuration
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
