--- a/tumbs/templates/base.html
+++ b/tumbs/templates/base.html
@@ -2,15 +2,15 @@
 {% load i18n %}
 
 {% block body %}
-  <nav class="navbar bg-dark navbar-dark navbar-expand">
+  <nav class="navbar bg-primary navbar-dark navbar-expand">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url "home" %}">Tumbs.app</a>
       <ul class="navbar-nav">
         {% if customer %}
 
           <li class="nav-item">
-            <a class="nav-link {% block websites_active %}{% endblock %}"
-               href="{% url "websites:websites_cms" %}">{% trans "My Websites" %}</a>
+            <a class="nav-link {% block websites_active %}{% endblock websites_active %}"
+               href="{% url "websites:websites_cms" %}">{% trans "My Site" %}</a>
           </li>
           
           <li class="nav-item dropdown">
