--- a/tumbs/templates/base.html
+++ b/tumbs/templates/base.html
@@ -20,7 +20,8 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="customerDropdownButton">
               <li><h6 class="dropdown-header">{{ customer.email }}</h6></li>
-              <li><a class="dropdown-item" href="{% url "accounts:sign_out" %}">{% trans "Sign out" %}</a></li>
+              <li><a class="dropdown-item" href="{% url "accounts:sign_out" %}"><i
+                class="bi-box-arrow-right"></i>&ensp;{% trans "Sign out" %}</a></li>
             </ul>
           </li>
 
