--- a/tumbs/templates/base.html
+++ b/tumbs/templates/base.html
@@ -7,6 +7,13 @@
       <a class="navbar-brand" href="{% url "home" %}">Tumbs.app</a>
       <ul class="navbar-nav">
 
+        {% if customer %}
+          <li class="nav-item">
+            <a class="nav-link {% block websites_active %}{% endblock websites_active %}"
+               href="{% url "websites:websites_cms" %}">{% trans "My Site" %}</a>
+          </li>
+        {% endif %}
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" id="languageDropdownButton"
                data-bs-toggle="dropdown" aria-label="{% trans 'Language' %}" aria-expanded="false">
@@ -30,10 +37,6 @@
 
         {% if customer %}
 
-          <li class="nav-item">
-            <a class="nav-link {% block websites_active %}{% endblock websites_active %}"
-               href="{% url "websites:websites_cms" %}">{% trans "My Site" %}</a>
-          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" id="customerDropdownButton"
                data-bs-toggle="dropdown" aria-label="{% trans 'Customer' %}" aria-expanded="false">
