--- a/tumbs/templates/base.html
+++ b/tumbs/templates/base.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block body %}
-  <nav class="navbar bg-primary navbar-dark navbar-expand">
+  <nav class="navbar navbar-dark navbar-expand fancy-gradient">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url "home" %}">Tumbs.app</a>
       <ul class="navbar-nav">
