--- a/tumbs/static/sass/project.scss
+++ b/tumbs/static/sass/project.scss
@@ -5,7 +5,7 @@
 }
 
 .fancy-gradient {
-  background: rgb(34,19,61);
+  background: $primary;
   background: linear-gradient(157deg, rgba(34,19,61,1) 0%, rgba(32,40,96,1) 35%, rgba(29,66,119,1) 100%);
 }
 
