--- a/tumbs/static/sass/project.scss
+++ b/tumbs/static/sass/project.scss
@@ -6,7 +6,7 @@
 
 .fancy-gradient {
   background: $primary;
-  background: linear-gradient(157deg, rgba(34,19,61,1) 0%, rgba(32,40,96,1) 35%, rgba(29,66,119,1) 100%);
+  background: linear-gradient(157deg, rgba(34, 19, 61, 1) 0%, rgba(32, 40, 96, 1) 35%, rgba(29, 66, 119, 1) 100%);
 }
 
 .alerts {
@@ -68,4 +68,40 @@
   background: $body-bg;
   border: 1px solid $text-muted;
   color: $text-muted;
+}
+
+.widgets {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.widget-wrapper {
+  width: 100%;
+  position: relative;
+  padding: 1.5rem;
+  border: 1px solid $gray-300;
+  border-radius: $border-radius;
+  background: $body-bg;
+
+  .widget-drag-handle {
+    position: absolute;
+    left: -1px;
+    top: -.7rem;
+    line-height: .8rem;
+    padding: .2em .5rem;
+    border: 1px solid $gray-300;
+    background: $body-bg;
+    color: $text-muted;
+    font-size: 80%;
+
+    &.disabled {
+      background: $gray-200;
+    }
+
+    i {
+      font-size: 120%;
+      margin-right: .5rem;
+    }
+  }
 }
