--- a/tumbs/static/sass/project.scss
+++ b/tumbs/static/sass/project.scss
@@ -82,7 +82,7 @@
 .widget-wrapper {
   width: 100%;
   position: relative;
-  padding: 1.5rem;
+  padding: 1.5rem 1rem 1rem 1rem;
   border: 1px solid $gray-200;
   border-radius: $border-radius;
   background: $gray-100;
@@ -90,6 +90,7 @@
   .widget-drag-handle {
     position: absolute;
     display: flex;
+    gap: .5rem;
     align-items: center;
     left: -1px;
     top: -.7rem;
@@ -102,7 +103,6 @@
 
     i {
       font-size: 140%;
-      margin-right: .5rem;
     }
   }
 
@@ -126,4 +126,14 @@
       color: $danger;
     }
   }
+}
+
+.mdxeditor-toolbar {
+  border-radius: $border-radius $border-radius 0 0;
+  background: $body-bg;
+  border-bottom: 1px solid $gray-200;
+}
+
+.mdxeditor-root-contenteditable {
+  background: $body-bg;
 }
