Give delete popover a real close button

--- a/tumbs/static/sass/project.scss
+++ b/tumbs/static/sass/project.scss
@@ -46,6 +46,10 @@
   }
 }
 
+.popover-header {
+  padding: .5rem .5rem .5rem 1rem;
+}
+
 .collapse-control {
   display: flex;
   align-items: center;
