--- a/tumbs/static/sass/cms/widgets.scss
+++ b/tumbs/static/sass/cms/widgets.scss
@@ -9,7 +9,7 @@
 .widget-wrapper {
   width: 100%;
   position: relative;
-  padding: 1.5rem 1rem 1rem 1rem;
+  padding: 1.5rem 1rem 0 1rem;
   border: 1px solid $gray-200;
   border-radius: $border-radius;
   background: $gray-100;
