Use Lato as a main font

--- a/tumbs/static/sass/bs-vars.scss
+++ b/tumbs/static/sass/bs-vars.scss
@@ -3,3 +3,5 @@ $brand-colour: #22133d;
 
 $primary: $brand-colour;
 $input-placeholder-color: $dim-grey;
+
+$font-family-base: "Lato", system-ui, -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "Noto Sans", "Liberation Sans";
