--- a/tumbs/static/sass/bs.scss
+++ b/tumbs/static/sass/bs.scss
@@ -4,7 +4,8 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
 //@import "~bootstrap/scss/mixins/banner";
 //@include bsBanner("");
 
-@import 'bs-vars';
+@import "fonts";
+@import "bs-vars";
 
 // Configuration
 @import "~bootstrap/scss/functions";
@@ -42,7 +43,7 @@ $bootstrap-icons-font-dir: "~bootstrap-icons/font/fonts";
 @import "~bootstrap/scss/modal";
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/popover";
-@import "~bootstrap/scss/carousel";
+//@import "~bootstrap/scss/carousel";
 @import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/offcanvas";
 @import "~bootstrap/scss/placeholders";
