--- a/tumbs/static/sass/cms/image-box.scss
+++ b/tumbs/static/sass/cms/image-box.scss
@@ -27,7 +27,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   gap: .5rem;
+  padding: .5rem;
 
   .image-box-canvas {
     opacity: .3;
