Prepare for image toolbar

--- a/tumbs/static/sass/project.scss
+++ b/tumbs/static/sass/project.scss
@@ -1,6 +1,6 @@
 @import 'bs';
 @import "cms/collapse-control";
-@import "cms/image-box";
+@import "cms/image-thumbnail";
 @import "cms/inline-editable";
 @import "cms/mdxeditor";
 @import "cms/website-top-bar";
