--- a/tumbs/static/sass/cms/mdxeditor.scss
+++ b/tumbs/static/sass/cms/mdxeditor.scss
@@ -1,5 +1,9 @@
 @import "~bootstrap/scss/variables";
 
+.mdxeditor {
+  flex-grow: 1;
+}
+
 .mdxeditor-toolbar {
   border-radius: $border-radius $border-radius 0 0;
   background: $body-bg;
