--- a/tumbs/static/sass/cms/widgets.scss
+++ b/tumbs/static/sass/cms/widgets.scss
@@ -9,7 +9,7 @@
 .widget-wrapper {
   width: 100%;
   position: relative;
-  padding: 1.5rem 1rem 0 1rem;
+  padding: 1.5rem 1rem 1rem 1rem;
   border: 1px solid $gray-200;
   border-radius: $border-radius;
   background: $gray-100;
@@ -39,8 +39,8 @@
     top: -.7rem;
     height: 1.4rem;
     line-height: 0;
-    font-size: 115%;
-    padding: 0;
+    font-size: 80%;
+    padding: 0 .2rem;
     border: 1px solid $gray-300;
     border-radius: 0;
     background: $body-bg;
@@ -53,4 +53,10 @@
       color: $danger;
     }
   }
+}
+
+.widget {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
 }
